Fix search icon size on mobile; remove border radius on iOS; use decanter 6.2.2 so we get latest colors

--- a/src/scss/components/search/_input.scss
+++ b/src/scss/components/search/_input.scss
@@ -22,6 +22,7 @@
       flex-grow: 1;
       background: transparent;
       border: 0;
+      border-radius: 0;
       font-weight: $su-font-semi-bold;
       font-size: 24px;
       padding: 0 64px 12px 12px;
